[gd_scene load_steps=64 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Connor Idle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Connor Jumping.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/connorSprite0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/connorSprite1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/connorSprite2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/connorSprite3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/connorSprite4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/ConnorAttack0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/ConnorAttack1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/ConnorAttack2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/ConnorAttack3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Niklas Idle.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Niklas Jump.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/NiklasWalks0.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/NiklasWalks1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/NiklasWalks2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/NiklasWalks3.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/NiklasAttack0.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/NiklasAttack1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/NiklasAttack2.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/NiklasAttack3.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/NiklasAttack4.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/NiklasAttack5.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/AntonIdle0.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Player/AntonIdle1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Player/AntonIdle2.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Player/AntonIdle3.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Player/AntonIdle4.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Player/AntonIdle5.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Player/AntonIdle6.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Player/Anton Jump.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Player/AntonWalk0.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Player/AntonWalk1.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Player/AntonWalk2.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Player/AntonWalk3.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Player/AntonAttack0.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Player/AntonAttack1.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Player/AntonAttack2.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Player/AntonAttack3.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Player/AntonAttack4.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Player/AntonAttack5.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Player/Ben Idle(1).png" type="Texture" id=43]
[ext_resource path="res://Sprites/Player/Ben Jump.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Player/BenWalk0.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Player/BenWalk1.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Player/BenWalk2.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Player/BenWalk3.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Player/BenAttack0.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Player/BenAttack1.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Player/BenAttack2.png" type="Texture" id=51]
[ext_resource path="res://DirtTiles.tres" type="TileSet" id=52]
[ext_resource path="res://TileMap.gd" type="Script" id=53]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=54]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=55]
[ext_resource path="res://icon.png" type="Texture" id=56]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Walking",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "BasicA",
"speed": 15.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 13.3122, 31.8019 )

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 20.0
height = 20.0

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Walking",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "BasicA",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "BasicA",
"speed": 22.22
} ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 43 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "Walking",
"speed": 12.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ) ],
"loop": true,
"name": "BasicA",
"speed": 11.0
} ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10.3333, 10 )

[node name="World" type="Node" index="0"]

[node name="Player" type="KinematicBody2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 190, 210 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
latency = 100

[node name="ConnorSprite" type="AnimatedSprite" parent="Player" index="0"]

frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="1"]

position = Vector2( -1.99999, -4.26165 )
scale = Vector2( 1, 1.36957 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="Player" index="2"]

visible = false
position = Vector2( -2.82727, -15.9355 )

[node name="MissileCooldown" type="Timer" parent="Player" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="BasicAttackCooldown" type="Timer" parent="Player" index="4"]

process_mode = 1
wait_time = 0.27
one_shot = true
autostart = false

[node name="BasicAttackArea" type="Area2D" parent="Player" index="5"]

editor/display_folded = true
visible = false
position = Vector2( -5.45456, -16.1538 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/BasicAttackArea" index="0"]

visible = false
position = Vector2( 0.69931, 0.69931 )
rotation = 1.5708
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="NiklasSprite" type="AnimatedSprite" parent="Player" index="6"]

visible = false
frames = SubResource( 4 )
animation = "Idle"

[node name="AntonSprite" type="AnimatedSprite" parent="Player" index="7"]

visible = false
position = Vector2( 0, -4 )
frames = SubResource( 5 )
animation = "Idle"

[node name="BenSprite" type="AnimatedSprite" parent="Player" index="8"]

visible = false
frames = SubResource( 6 )
animation = "Idle"

[node name="PlayerSpecificCooldowns" type="Node" parent="Player" index="9"]

[node name="Anton_4Cooldown" type="Timer" parent="Player/PlayerSpecificCooldowns" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TileMap" type="TileMap" parent="." index="1"]

position = Vector2( -310, 40 )
mode = 0
tile_set = ExtResource( 52 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 8, 4, 0, 26, 4, 0, 65544, 4, 0, 65562, 4, 0, 131080, 4, 0, 131098, 4, 0, 196616, 4, 0, 196634, 4, 0, 262152, 4, 0, 262170, 4, 0, 327688, 4, 0, 327706, 4, 0, 393224, 4, 0, 393242, 4, 0, 458760, 4, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 4, 0 )
script = ExtResource( 53 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 54 )

[node name="VisionDirection" type="Label" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Cooldown" type="Label" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 40.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Enemy" type="KinematicBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 460, 220 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy" index="0"]

position = Vector2( -1, -1 )
scale = Vector2( 3, 3 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Enemy" index="1"]

position = Vector2( -0.999969, -0.999985 )
texture = ExtResource( 56 )

[node name="VBoxContainer" type="VBoxContainer" parent="Enemy" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = -80.0
margin_right = 26.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="HP_Label" type="Label" parent="Enemy/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 56.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "HP Label"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_entered" from="Player/BasicAttackArea" to="Player" method="_on_BasicAttackArea_body_entered"]

[connection signal="body_exited" from="Player/BasicAttackArea" to="Player" method="_on_BasicAttackArea_body_exited"]


